--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,14 @@ section{
     border: 1px solid red;
     margin: 10px;
 }
+
+
+.full1{
+    border: 2px solid red;
+}.full2{
+    border: 2px solid red;
+}.full3{
+    border: 2px solid red;
+}.full4{
+    border: 2px solid red;
+}
